<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="goodsSaveBean"
            type="com.trade.goods.model.GoodsSaveBean"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>

            <EditText
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_30"
                android:background="@color/light_gray"
                android:gravity="center"
                android:text="@={goodsSaveBean.name}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>

            <EditText
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_30"
                android:background="@color/light_gray"
                android:gravity="center"
                android:text="@={goodsSaveBean.unit}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_price"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>

            <EditText
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_30"
                android:background="@color/light_gray"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@={goodsSaveBean.inUnitPrice}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_price"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>

            <EditText
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_30"
                android:background="@color/light_gray"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@={goodsSaveBean.outUnitPrice}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_image"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>

            <ImageView
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_70"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_30"
                app:image="@{goodsSaveBean.image}"
                app:placeHolder="@{@drawable/ic_rent_camera}"
                android:gravity="center"
                app:clickListener="@{goodsSaveBean.imageListener}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/button_rent"
            android:text="确定"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17"
            app:clickListener="@{goodsSaveBean.listener}"/>
    </LinearLayout>
</layout>