<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.trade.user.login.model.LoginBean"/>

        <import type="com.trade.user.register.RegisterActivity.RegisterClickListener"/>

        <import type="android.text.method.TransformationMethod"/>

        <variable
            name="loginBean"
            type="LoginBean"/>

        <variable
            name="registerListener"
            type="RegisterClickListener"/>

        <variable
            name="transMethod"
            type="TransformationMethod"/>
    </data>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:orientation="vertical">

    <include layout="@layout/toolbar_login"/>
    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_80"
        android:src="@mipmap/ic_login_logo"/>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_login"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_30">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.2"
                android:background="@drawable/edit_login_black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:textColor="@color/white"
                android:background="@null"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:text="@={loginBean.phone}"
                android:paddingLeft="@dimen/dp_15"
                android:textColorHint="@color/white"
                android:textSize="@dimen/sp_14"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_30">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.2"
                android:background="@drawable/edit_login_black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@null"
                android:gravity="center_vertical">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/hint_pwd"
                    app:transMethod="@{transMethod}"
                    android:paddingLeft="@dimen/dp_15"
                    android:text="@={loginBean.password}"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/sp_14"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_10"
                    android:onClick="@{()->registerListener.onShowPwd()}"
                    android:src="@mipmap/ic_login_eye"/>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_30">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.2"
                android:background="@drawable/edit_login_black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@null">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_verify"
                    android:text="@={loginBean.verify}"
                    android:textColor="@color/white"
                    android:paddingLeft="@dimen/dp_15"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/sp_14"/>

                <TextView
                    android:id="@+id/tv_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/text_login_verify_black"
                    android:text="@string/send_verify"
                    android:onClick="@{()->registerListener.onVerify()}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_11"/>
            </LinearLayout>
        </FrameLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_60"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/button_login"
            android:text="@string/login"
            android:onClick="@{()->registerListener.onLogin()}"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_18"/>
    </LinearLayout>

</RelativeLayout>
</layout>