<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.trade.login.model.LoginBean"/>

        <import type="com.trade.login.ui.LoginPwdActivity.LoginBlackClickListener"/>

        <import type="android.text.method.TransformationMethod"/>

        <variable
            name="loginBean"
            type="LoginBean"/>

        <variable
            name="loginBlackListener"
            type="LoginBlackClickListener"/>

        <variable
            name="transMethod"
            type="TransformationMethod"/>

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:orientation="vertical">

        <include layout="@layout/toolbar_common"/>
        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_30"
            android:alpha="1"
            android:layout_marginTop="@dimen/dp_80"
            android:src="@mipmap/ic_login_logo"/>
        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/iv_login"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_25"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginStart="@dimen/dp_25">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.2"
                    android:background="@drawable/edit_login_black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:background="@null"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:paddingLeft="@dimen/dp_15"
                    android:text="@={loginBean.phone}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/sp_14"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_25"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginStart="@dimen/dp_25">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.2"
                    android:background="@drawable/edit_login_black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:background="@null"
                    android:gravity="center_vertical">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/hint_pwd"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/dp_15"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:text="@={loginBean.password}"
                        android:textSize="@dimen/sp_14"
                        app:transMethod="@{transMethod}"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_10"
                        android:onClick="@{()->loginBlackListener.onShowPwd()}"
                        android:src="@mipmap/ic_login_eye"/>
                </LinearLayout>
            </FrameLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginEnd="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_25"
                android:background="@drawable/button_login"
                android:onClick="@{()->loginBlackListener.onLogin()}"
                android:text="@string/login"
                android:textColor="@color/colorAccentRed"
                android:textSize="@dimen/sp_18"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_25"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:onClick="@{()->loginBlackListener.onVerify()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_1"
                        android:layout_marginStart="@dimen/dp_1"
                        android:text="@string/login_use_verify"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_13"
                        android:src="@mipmap/ic_arrow_right"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->loginBlackListener.onForgetPwd()}"
                    android:text="@string/login_forget_pwd"
                    android:textColor="@color/white"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>